// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeaturedServiceCard should match the snapshot 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          Object {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": Object {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              Object {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  Object {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    Object {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  SERVICES_HOME
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          activityState={2}
          collapsable={false}
          forwardedRef={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              Array [
                Object {
                  "display": "flex",
                  "overflow": undefined,
                },
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              Object {
                "close": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                handlerTag={1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        accessibilityLabel="### Accessibility Label ###"
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        onTouchEnd={[Function]}
                        style={
                          Object {
                            "flexGrow": 1,
                          }
                        }
                        testID="FeaturedServiceCardTestID-pressable"
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "transform": Array [
                                  Object {
                                    "scale": undefined,
                                  },
                                ],
                              },
                              Object {
                                "flexGrow": 1,
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "alignItems": "flex-start",
                                  "backgroundColor": "#F4F5F8",
                                  "borderColor": "#E8EBF1",
                                  "borderCurve": "continuous",
                                  "borderRadius": 8,
                                  "borderWidth": 1,
                                  "flex": 1,
                                  "flexDirection": "column",
                                  "justifyContent": "space-between",
                                  "padding": 16,
                                  "width": 210,
                                },
                                undefined,
                              ]
                            }
                            testID="FeaturedServiceCardTestID"
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "flex-start",
                                  "flexDirection": "row",
                                  "justifyContent": "space-between",
                                  "width": "100%",
                                }
                              }
                            >
                              <View
                                accessibilityIgnoresInvertColors={true}
                                style={
                                  Array [
                                    Object {
                                      "borderColor": "rgba(14,15,19,0.1)",
                                      "borderCurve": "continuous",
                                      "borderWidth": 1,
                                      "overflow": "hidden",
                                    },
                                    Object {
                                      "backgroundColor": "#FFFFFF",
                                      "borderRadius": 12,
                                      "height": 66,
                                      "padding": 9,
                                      "width": 66,
                                    },
                                  ]
                                }
                              >
                                <View
                                  style={
                                    Array [
                                      Object {
                                        "backgroundColor": "#FFFFFF",
                                        "borderCurve": "continuous",
                                        "overflow": "hidden",
                                      },
                                      Object {
                                        "borderRadius": 3,
                                      },
                                    ]
                                  }
                                >
                                  <Image
                                    accessibilityIgnoresInvertColors={true}
                                    onError={[Function]}
                                    source={
                                      Object {
                                        "uri": "https://assets.cdn.io.pagopa.it/logos/services/1.png",
                                      }
                                    }
                                    style={
                                      Object {
                                        "height": "100%",
                                        "resizeMode": "contain",
                                        "width": "100%",
                                      }
                                    }
                                  />
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                Object {
                                  "marginTop": 16,
                                  "width": "100%",
                                }
                              }
                            >
                              <Text
                                allowFontScaling={false}
                                color="blueIO-850"
                                defaultColor="bluegreyDark"
                                defaultWeight="Semibold"
                                font="TitilliumSansPro"
                                fontStyle={
                                  Object {
                                    "fontSize": 22,
                                    "lineHeight": 24,
                                  }
                                }
                                lineBreakMode="head"
                                numberOfLines={3}
                                style={
                                  Array [
                                    Object {
                                      "fontSize": 22,
                                      "lineHeight": 24,
                                    },
                                    Object {
                                      "color": "#031344",
                                      "fontFamily": "Titillium Sans Pro",
                                      "fontStyle": "normal",
                                      "fontWeight": "600",
                                    },
                                  ]
                                }
                                weight="Semibold"
                              >
                                ### Service ###
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`FeaturedServiceCard should match the snapshot when isNew is true 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          Object {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": Object {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              Object {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  Object {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    Object {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  SERVICES_HOME
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          activityState={2}
          collapsable={false}
          forwardedRef={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              Array [
                Object {
                  "display": "flex",
                  "overflow": undefined,
                },
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              Object {
                "close": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                handlerTag={3}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        accessibilityLabel="### Accessibility Label ###"
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        onTouchEnd={[Function]}
                        style={
                          Object {
                            "flexGrow": 1,
                          }
                        }
                        testID="FeaturedServiceCardTestID-pressable"
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "transform": Array [
                                  Object {
                                    "scale": undefined,
                                  },
                                ],
                              },
                              Object {
                                "flexGrow": 1,
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "alignItems": "flex-start",
                                  "backgroundColor": "#F4F5F8",
                                  "borderColor": "#E8EBF1",
                                  "borderCurve": "continuous",
                                  "borderRadius": 8,
                                  "borderWidth": 1,
                                  "flex": 1,
                                  "flexDirection": "column",
                                  "justifyContent": "space-between",
                                  "padding": 16,
                                  "width": 210,
                                },
                                Object {
                                  "backgroundColor": "#EEE8FC",
                                  "borderColor": "#DDD1F9",
                                },
                              ]
                            }
                            testID="FeaturedServiceCardTestID"
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "flex-start",
                                  "flexDirection": "row",
                                  "justifyContent": "space-between",
                                  "width": "100%",
                                }
                              }
                            >
                              <View
                                accessibilityIgnoresInvertColors={true}
                                style={
                                  Array [
                                    Object {
                                      "borderColor": "rgba(14,15,19,0.1)",
                                      "borderCurve": "continuous",
                                      "borderWidth": 1,
                                      "overflow": "hidden",
                                    },
                                    Object {
                                      "backgroundColor": "#FFFFFF",
                                      "borderRadius": 12,
                                      "height": 66,
                                      "padding": 9,
                                      "width": 66,
                                    },
                                  ]
                                }
                              >
                                <View
                                  style={
                                    Array [
                                      Object {
                                        "backgroundColor": "#FFFFFF",
                                        "borderCurve": "continuous",
                                        "overflow": "hidden",
                                      },
                                      Object {
                                        "borderRadius": 3,
                                      },
                                    ]
                                  }
                                >
                                  <Image
                                    accessibilityIgnoresInvertColors={true}
                                    onError={[Function]}
                                    source={
                                      Object {
                                        "uri": "https://assets.cdn.io.pagopa.it/logos/services/1.png",
                                      }
                                    }
                                    style={
                                      Object {
                                        "height": "100%",
                                        "resizeMode": "contain",
                                        "width": "100%",
                                      }
                                    }
                                  />
                                </View>
                              </View>
                              <View
                                style={
                                  Array [
                                    Object {
                                      "alignItems": "center",
                                      "borderCurve": "continuous",
                                      "borderRadius": 24,
                                      "flexDirection": "row",
                                      "justifyContent": "center",
                                      "paddingHorizontal": 8,
                                      "paddingVertical": 4,
                                    },
                                    Object {
                                      "backgroundColor": "#DDD1F9",
                                    },
                                  ]
                                }
                              >
                                <Text
                                  ellipsizeMode="tail"
                                  numberOfLines={1}
                                  style={
                                    Array [
                                      Object {
                                        "alignSelf": "center",
                                        "flexShrink": 1,
                                        "fontSize": 12,
                                        "lineHeight": 16,
                                        "textTransform": "uppercase",
                                      },
                                      Object {
                                        "fontFamily": "Titillium Sans Pro",
                                        "fontStyle": "normal",
                                        "fontWeight": "600",
                                      },
                                      Object {
                                        "color": "#1A0744",
                                      },
                                    ]
                                  }
                                >
                                  New
                                </Text>
                              </View>
                            </View>
                            <View
                              style={
                                Object {
                                  "marginTop": 16,
                                  "width": "100%",
                                }
                              }
                            >
                              <Text
                                allowFontScaling={false}
                                color="hanPurple-850"
                                defaultColor="bluegreyDark"
                                defaultWeight="Semibold"
                                font="TitilliumSansPro"
                                fontStyle={
                                  Object {
                                    "fontSize": 22,
                                    "lineHeight": 24,
                                  }
                                }
                                lineBreakMode="head"
                                numberOfLines={3}
                                style={
                                  Array [
                                    Object {
                                      "fontSize": 22,
                                      "lineHeight": 24,
                                    },
                                    Object {
                                      "color": "#1A0744",
                                      "fontFamily": "Titillium Sans Pro",
                                      "fontStyle": "normal",
                                      "fontWeight": "600",
                                    },
                                  ]
                                }
                                weight="Semibold"
                              >
                                ### Service ###
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
